# rpg-combat-kata

./: .gitignore  CMakeLists.txt  README.md
.run/: All Tests.run.xml
docs/: iteration-five.md  iteration-four.md  iteration-one.md  iteration-three.md  iteration-two.md
src/: character.cxx  character.hxx  combat.cxx  combat.hxx  cxx_17_traits.hxx  damageable.hxx  health.cxx  health.hxx  position.hxx  prop.cxx  prop.hxx  target.hxx
tests/: character_tests.cxx  combat_tests.cxx  damagaeble_tests.cxx  health_tests.cxx  prop_tests.cxx  target_tests.cxx
